dto constructor optimization